# useopenGL

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/glad/: glad.h
